[package]
name = "gula"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[features]
default = ["io"]
io = []

[profile.dev]
opt-level = 3
debug-assertions = false
overflow-checks = false
debug = 2

[profile.release]
opt-level = 3
debug-assertions = false
overflow-checks = false
debug = 2

[dependencies]
paste = "1.0.11"

[workspace]
members = ["fizzbuzz"]