[package]
name = "gula"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[features]
io = []
default = [
    # "io",
]

[profile.dev]
opt-level = 3
debug-assertions = false
overflow-checks = false
debug = 2
lto = true

[profile.release]
opt-level = 3
debug-assertions = false
overflow-checks = false
debug = 2
lto = true

[dependencies]
paste = "1.0.11"

[workspace]
members = ["fizzbuzz"]